<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailCarFragment"
            app:destination="@id/detailCarFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search"
            app:popUpTo="@id/navigation_search"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.myapplication.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.example.myapplication.ui.sell.SellFragment"
        android:label="@string/title_sell"
        tools:layout="@layout/fragment_sell" >
        <action
            android:id="@+id/action_navigation_sell_to_addNewCarFragment"
            app:destination="@id/addNewCarFragment"
            app:popUpTo="@id/addNewCarFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailCarFragment"
        android:name="com.example.myapplication.ui.detailCar.DetailCarFragment"
        android:label="DetailCarFragment" >
        <action
            android:id="@+id/action_detailCarFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="carId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
    <fragment
        android:id="@+id/addNewCarFragment"
        android:name="com.example.myapplication.ui.addCar.AddNewCarFragment"
        android:label="@string/title_add_new_car"
        tools:layout="@layout/fragment_add_new_car" >
        <action
            android:id="@+id/action_addNewCarFragment_to_navigation_sell"
            app:destination="@id/navigation_sell" />
    </fragment>

</navigation>