<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint_layout_add_new_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.addCar.AddNewCarFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_add_new_car_without_connection"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image_error_connection"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/beg_removebg_preview"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/error_connection_text">

            </ImageView>
            <TextView
                android:id="@+id/error_message_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/image_error_connection"
                app:layout_constraintStart_toStartOf="@id/image_error_connection"
                app:layout_constraintTop_toBottomOf="@id/image_error_connection"
                android:text="@string/error_message_no_connection">

            </TextView>
            <TextView
                android:id="@+id/retry_again_error_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:clickable="true"
                android:textColor="@color/blue_retry_again"
                app:layout_constraintStart_toStartOf="@id/image_error_connection"
                app:layout_constraintEnd_toEndOf="@id/image_error_connection"
                app:layout_constraintTop_toBottomOf="@id/error_message_connection"
                android:text="@string/retry_again"
                android:focusable="true">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_add_new_car_with_connection"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/car_image_1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_weight="0.50"
                android:clickable="true"
                android:contentDescription="@string/add_car_image_content_description"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/placeholder_car_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_brand_add_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_image_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_brand_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/car_brand_add"
                    android:inputType="text"
                    android:longClickable="false">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_year_add_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_brand_add_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_year_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/car_year_add"
                    android:inputType="number"
                    android:longClickable="false">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_model_add_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_year_add_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_model_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/car_model_add"
                    android:inputType="text"
                    android:longClickable="false">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_fuel_type_add_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_model_add_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_fuel_type_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/car_fuel_type_add"
                    android:inputType="text"
                    android:longClickable="false">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_power_add_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                android:clickable="false"
                android:longClickable="false"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_fuel_type_add_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_power_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:longClickable="false"
                    android:focusable="false"
                    android:hint="@string/car_power_add"
                    android:inputType="number">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_seats_add_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_power_add_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_seats_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_seats_add"
                    android:inputType="number"
                    android:maxLength="1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_price_add_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:longClickable="false"
                android:focusable="false"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_seats_add_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_price_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:longClickable="false"
                    android:focusable="false"
                    android:maxLength="15"
                    android:hint="@string/car_price_add"
                    android:inputType="numberDecimal">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_mileage_add_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_price_add_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_mileage_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_mileage_add"
                    android:inputType="numberDecimal"
                    android:maxLength="7">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_color_add_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_mileage_add_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_color_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/car_color_add"
                    android:inputType="numberDecimal"
                    android:longClickable="false">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:padding="0dp"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@id/car_color_add_label"
                app:layout_constraintBottom_toTopOf="@id/button_add_new_car"
                app:layout_constraintEnd_toEndOf="@id/button_add_new_car"
                app:layout_constraintStart_toStartOf="@id/button_add_new_car"
                tools:context=".MainActivity">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <com.q42.android.scrollingimageview.ScrollingImageView
                        android:id="@+id/scrolling_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:source="@drawable/scrolling_background"
                        app:speed="60dp" />

                    <com.q42.android.scrollingimageview.ScrollingImageView
                        android:id="@+id/scrolling_foreground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:source="@drawable/scrolling_foreground"
                        app:speed="150dp" />
                </FrameLayout>

                <ImageView
                    android:id="@+id/scr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/van2"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/scr2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/van3"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>
            <Button
                android:id="@+id/button_add_new_car"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/gradient"
                app:backgroundTint="@null"
                android:text="@string/add_new_car"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </Button>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
